; ModuleID = '/home/carl/AnghaBench/timescaledb/tsl/src/continuous_aggs/extr_materialize.c_continuous_aggs_completed_threshold_get.c'
source_filename = "/home/carl/AnghaBench/timescaledb/tsl/src/continuous_aggs/extr_materialize.c_continuous_aggs_completed_threshold_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Anum_continuous_aggs_completed_threshold_pkey_materialization_id = common dso_local global i32 0, align 4
@BTEqualStrategyNumber = common dso_local global i32 0, align 4
@F_INT4EQ = common dso_local global i32 0, align 4
@CONTINUOUS_AGGS_COMPLETED_THRESHOLD = common dso_local global i32 0, align 4
@CONTINUOUS_AGGS_COMPLETED_THRESHOLD_PKEY = common dso_local global i32 0, align 4
@completed_threshold_tuple_found = common dso_local global i32 0, align 4
@AccessShareLock = common dso_local global i32 0, align 4
@CONTINUOUS_AGGS_COMPLETED_THRESHOLD_TABLE_NAME = common dso_local global i32 0, align 4
@PG_INT64_MIN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @continuous_aggs_completed_threshold_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @continuous_aggs_completed_threshold_get(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca [1 x i32], align 4
  store i32 %0, i32* %3, align 4
  store i32 0, i32* %4, align 4
  %6 = getelementptr inbounds [1 x i32], [1 x i32]* %5, i64 0, i64 0
  %7 = load i32, i32* @Anum_continuous_aggs_completed_threshold_pkey_materialization_id, align 4
  %8 = load i32, i32* @BTEqualStrategyNumber, align 4
  %9 = load i32, i32* @F_INT4EQ, align 4
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @Int32GetDatum(i32 %10)
  %12 = call i32 @ScanKeyInit(i32* %6, i32 %7, i32 %8, i32 %9, i32 %11)
  %13 = load i32, i32* @CONTINUOUS_AGGS_COMPLETED_THRESHOLD, align 4
  %14 = load i32, i32* @CONTINUOUS_AGGS_COMPLETED_THRESHOLD_PKEY, align 4
  %15 = getelementptr inbounds [1 x i32], [1 x i32]* %5, i64 0, i64 0
  %16 = load i32, i32* @completed_threshold_tuple_found, align 4
  %17 = load i32, i32* @AccessShareLock, align 4
  %18 = load i32, i32* @CONTINUOUS_AGGS_COMPLETED_THRESHOLD_TABLE_NAME, align 4
  %19 = call i32 @ts_catalog_scan_one(i32 %13, i32 %14, i32* %15, i32 1, i32 %16, i32 %17, i32 %18, i32* %4)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %23, label %21

21:                                               ; preds = %1
  %22 = load i32, i32* @PG_INT64_MIN, align 4
  store i32 %22, i32* %2, align 4
  br label %25

23:                                               ; preds = %1
  %24 = load i32, i32* %4, align 4
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %23, %21
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i32 @ScanKeyInit(i32*, i32, i32, i32, i32) #1

declare dso_local i32 @Int32GetDatum(i32) #1

declare dso_local i32 @ts_catalog_scan_one(i32, i32, i32*, i32, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
